Almost done with header. Made it more bem like, also added an if-else statment for the status of login

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
     "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "material-icons": "^0.3.1"
   }
 }
