--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Coding 2nd task",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --config ./build/webpack.dev.conf.js",
-    "build": "webpack --config ./build/webpack.build.conf.js"
+    "dev": "webpack-dev-server --env development",
+    "build": "webpack --env production"
   },
   "repository": {
     "type": "git",
@@ -22,18 +22,14 @@
   },
   "homepage": "https://github.com/shm29/FSD-2nd-task#readme",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
     "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
@@ -46,6 +42,10 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "air-datepicker": "^2.2.3",
+    "ion-rangeslider": "^2.3.0",
+    "inputmask": "^4.0.9",
+    "jquery": "^3.4.1",
     "material-icons": "^0.3.1"
   }
 }
