--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --env development",
-    "build": "webpack --env production"
+    "build": "webpack --env production",
+    "start": "webpack --env development"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shm29/FSD-2nd-task.git"
   },
-  "browserslist": [
-    "> 1%",
-    "last 3 version"
-  ],
   "author": "Artur Sholomko",
   "license": "GPL-3.0",
   "bugs": {
@@ -23,23 +20,24 @@
   "homepage": "https://github.com/shm29/FSD-2nd-task#readme",
   "devDependencies": {
     "autoprefixer": "^9.6.1",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^3.0.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "pug": "^2.0.4",
+    "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
